RESOLVED FIXED157073
Content disappears on mouse over.
https://bugs.webkit.org/show_bug.cgi?id=157073
Summary Content disappears on mouse over.
alan
Reported 2016-04-27 09:32:43 PDT
Created attachment 277484 [details] Test reduction See test reduction.
Attachments
Test reduction (698 bytes, text/html)
2016-04-27 09:32 PDT, alan
no flags
Patch (12.33 KB, patch)
2016-04-27 10:05 PDT, alan
no flags
Archive of layout-test-results from ews101 for mac-yosemite (778.60 KB, application/zip)
2016-04-27 10:56 PDT, Build Bot
no flags
Archive of layout-test-results from ews126 for ios-simulator-wk2 (615.05 KB, application/zip)
2016-04-27 11:05 PDT, Build Bot
no flags
Archive of layout-test-results from ews115 for mac-yosemite (853.68 KB, application/zip)
2016-04-27 11:11 PDT, Build Bot
no flags
Patch (12.42 KB, patch)
2016-04-28 08:31 PDT, alan
no flags
Patch (12.42 KB, text/plain)
2016-04-28 08:36 PDT, alan
no flags
Patch (12.15 KB, patch)
2016-04-28 13:17 PDT, alan
no flags
Patch (12.16 KB, patch)
2016-04-28 15:32 PDT, alan
no flags
alan
Comment 1 2016-04-27 09:33:24 PDT
alan
Comment 2 2016-04-27 10:05:39 PDT
Build Bot
Comment 3 2016-04-27 10:56:18 PDT
Comment on attachment 277486 [details] Patch Attachment 277486 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1229698 New failing tests: fast/text/text-node-remains-dirty-after-calling-surroundContents.html
Build Bot
Comment 4 2016-04-27 10:56:22 PDT
Created attachment 277490 [details] Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Simon Fraser (smfr)
Comment 5 2016-04-27 11:04:45 PDT
Comment on attachment 277486 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=277486&action=review > Source/WebCore/ChangeLog:10 > + The remove operation marks the ancestor tree dirty (and this newly constructed line is supposed to be clean) Missing period at the end. > Source/WebCore/rendering/RenderBlockLineLayout.cpp:973 > + // removeFromParent() unnecessarily dirties the ancestor subtree. But do we know that these dirty bits came from the removeFromParent(), or could they have been dirty already? > Source/WebCore/rendering/RenderText.cpp:1271 > - // FIXME: should not be needed!!! > - if (!textBox.len()) { > - // We want the box to be destroyed. > - textBox.removeFromParent(); > - m_lineBoxes.remove(textBox); > - delete &textBox; > - return; > - } > - > m_containsReversedText |= !textBox.isLeftToRightDirection(); This seems like a behavior change. Previously, you would have never hit the last statement if len was 0. Now you do.
Build Bot
Comment 6 2016-04-27 11:05:01 PDT
Comment on attachment 277486 [details] Patch Attachment 277486 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1229705 New failing tests: fast/text/text-node-remains-dirty-after-calling-surroundContents.html
Build Bot
Comment 7 2016-04-27 11:05:05 PDT
Created attachment 277492 [details] Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Build Bot
Comment 8 2016-04-27 11:11:33 PDT
Comment on attachment 277486 [details] Patch Attachment 277486 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1229710 New failing tests: fast/text/text-node-remains-dirty-after-calling-surroundContents.html
Build Bot
Comment 9 2016-04-27 11:11:38 PDT
Created attachment 277494 [details] Archive of layout-test-results from ews115 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-yosemite Platform: Mac OS X 10.10.5
alan
Comment 10 2016-04-28 08:31:27 PDT
alan
Comment 11 2016-04-28 08:35:06 PDT
(In reply to comment #5) > Comment on attachment 277486 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=277486&action=review > > > Source/WebCore/ChangeLog:10 > > + The remove operation marks the ancestor tree dirty (and this newly constructed line is supposed to be clean) > > Missing period at the end. > > > Source/WebCore/rendering/RenderBlockLineLayout.cpp:973 > > + // removeFromParent() unnecessarily dirties the ancestor subtree. > > But do we know that these dirty bits came from the removeFromParent(), or > could they have been dirty already? It's a newly constructed line, it's not supposed to be dirty. (fixed) > > > Source/WebCore/rendering/RenderText.cpp:1271 > > - // FIXME: should not be needed!!! > > - if (!textBox.len()) { > > - // We want the box to be destroyed. > > - textBox.removeFromParent(); > > - m_lineBoxes.remove(textBox); > > - delete &textBox; > > - return; > > - } > > - > > m_containsReversedText |= !textBox.isLeftToRightDirection(); > > This seems like a behavior change. Previously, you would have never hit the > last statement if len was 0. Now you do. I assumed a zero length string has no impact on this. (fixed)
alan
Comment 12 2016-04-28 08:36:02 PDT
alan
Comment 13 2016-04-28 13:17:39 PDT
Simon Fraser (smfr)
Comment 14 2016-04-28 13:53:22 PDT
Comment on attachment 277644 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=277644&action=review > Source/WebCore/rendering/RenderBlockLineLayout.cpp:967 > +#ifndef NDEBUG Use !ASSERT_DISABLED
alan
Comment 15 2016-04-28 15:32:35 PDT
WebKit Commit Bot
Comment 16 2016-04-28 18:10:48 PDT
Comment on attachment 277655 [details] Patch Clearing flags on attachment: 277655 Committed r200220: <http://trac.webkit.org/changeset/200220>
WebKit Commit Bot
Comment 17 2016-04-28 18:10:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.